--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js'></script>
-<script src="./js/app.js"></script>
+<script src="./app.js"></script>
 <script src="./controllers/homeCtrl.js"></script>
 <script src="./controllers/searchCtrl.js"></script>
 <script src="./controllers/resourcesCtrl.js"></script>
